# SkillSmith

./: .gitignore  README.md  bootstrap.py  pyproject.toml  requirements-prod.txt
builtin/: __init__.py
builtin/tools/: __init__.py  _base.py  bash.py  file_ops.py  grep.py  registry.py  web.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  agent.py  candidates.py  doctor.py  feishu_bridge.py  verify.py
core/: __init__.py
core/context/: __init__.py  compaction.py  manager.py  memory.py  schemas.py  scratchpad.py
core/manager/: __init__.py  conversation_manager.py  session_context.py  session_manager.py
core/memento_s/: __init__.py  agent.py  agent_profile.py  emitters.py  schemas.py  stream_output.py  tools.py  utils.py
core/memento_s/phases/: __init__.py  execution.py  intent.py  planning.py  reflection.py  state.py
core/memento_s/policies/: __init__.py  base.py  builtin_policies.py
core/prompts/: __init__.py  templates.py
core/skill/: __init__.py  gateway.py  initializer.py  provider.py  schema.py
core/skill/embedding/: __init__.py  client.py  utils.py
core/skill/evolution/: __init__.py  workflow.py
core/skill/execution/: __init__.py  error_policy.py  executor.py  prompts.py
core/skill/execution/analyzer/: __init__.py  dependencies.py  parsing.py
core/skill/execution/sandbox/: __init__.py  artifacts.py  base.py  uv.py
core/skill/execution/utils/: skill_keys_checker.py
core/skill/importers/: __init__.py  base.py  config.py  factory.py  github.py  manager.py
core/skill/retrieval/: __init__.py  embedding_recall.py  indexer.py  multi_recall.py  remote_catalog.py
core/skill/store/: __init__.py  library.py
core/skill/store/persistence/: __init__.py  (+4 more)
core/utils/: __init__.py  media.py  platform.py
gui/: __init__.py  app.py  gui.py
gui-rl/: gui_qwen3vl_4b_eval.sh
gui/i18n/: __init__.py
gui/i18n/locales/: en_US.json  zh_CN.json
gui/modules/: __init__.py  auto_update_manager.py  command_controller.py  conversation_controller.py  input_controller.py  keyboard_controller.py  layout.py  message_controller.py  message_renderer.py  ota_checker.py  settings_panel.py  ui_feedback_controller.py  update_notifier.py
gui/widgets/: __init__.py  chat_message.py  sidebar.py  skill_call_widget.py  toolbar.py
instructions/: README.md
middleware/config/: __init__.py  config_manager.py  config_models.py  system_config.json  user_config_schema.json  user_config_tlp.json
middleware/config/migrations/: __init__.py  migrator.py  template_merge.py
middleware/llm/: __init__.py  client.py  exceptions.py  schema.py  utils.py
middleware/storage/: __init__.py  models.py  schemas.py  utils.py
middleware/storage/core/: __init__.py  base_repository.py  engine.py
middleware/storage/migrations/: alembic.ini  db_updater.py  env.py
middleware/storage/services/: __init__.py  base_service.py  conversation_service.py  session_service.py  skill_service.py  sqlite_fallback.py
openclaw-combine/: README.md
openclaw-rl/: README.md  run_qwen35_4b_openclaw_rl.sh
slime/slime/utils/: arguments.py
slime/slime_plugins/megatron_bridge/: __init__.py  qwen3_5.py
utils/: __init__.py  debug_logger.py  logger.py  path_manager.py  token_utils.py
(+2 files in other folders)
